feat(api): get profile info
