# apps/api/src/modules/users/routers/user.router.ts
@@ -1,0 +1,9 @@
+import { UserControllerImpl } from '@users/controllers/user.controller'
+import { Router } from 'express'
+
+const userRouter = Router()
+const controller = new UserControllerImpl()
+
+userRouter.get('/', controller.findProfile.bind(controller))
+
+export { userRouter }
